[package]
name = "luminance-glutin"
version = "0.14.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Glutin support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glutin"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-glutin"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
gl = "0.14"
glutin = { version = "0.30.3", default-features = false }
glutin-winit = { version = "0.2.1", default-features = false }
luminance = { version = ">=0.46, <0.48", path = "../luminance" }
luminance-gl = { version = "0.19", path = "../luminance-gl" }
raw-window-handle = { version = "0.5.0", default-features = false }
winit = { version = "0.27.5", default-features = false }

[features]
default = ["glx", "x11", "wayland", "wgl"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita-notitle"]
